# form13f_aiagent

./: .dockerignore  .env.example  .env.local  .env.supabase  .gitattributes  .gitignore  .railway-trigger  .railwayignore  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOCKER_DEPLOYMENT.md  Dockerfile  PROJECT_ANALYSIS.txt  README.md  SEMANTIC_SEARCH_LIMITATIONS.md  TESTING_PHASE8.md  deploy_railway.bat  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements.txt  run_ui.bat  test_10k_components.py  test_vector_store_10k.py
.claude/: settings.local.json
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/raw/: COVERPAGE.tsv  INFOTABLE.tsv  OTHERMANAGER.tsv  OTHERMANAGER2.tsv  README.md  SIGNATURE.tsv  SUBMISSION.tsv  SUMMARYPAGE.tsv
docs/: AGENT_USAGE.md  ARCHITECTURE.md  DATA_FLOW.md  DECISIONS.md  DEPLOYMENT_READINESS.md  IMPLEMENTATION_PLAN.md  LITELLM_GUIDE.md  PHASE8A_COMPLETE.md  PHASE8A_PIPELINE_GUIDE.md  PHASE8B_RAG_GUIDE.md  PHASE8C_API_COMPLETE.md  PHASE8D_UI_COMPLETE.md  PHASE8_COMPLETE_SUMMARY.md  PHASE8_FINAL_SUMMARY.md  PHASE8_TESTING.md  QDRANT_DEPLOYMENT_GUIDE.md  QDRANT_ON_RAILWAY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_TROUBLESHOOTING.md  SQL_SCHEMA.md  SUPABASE_SETUP.md  TESTING_COMPLETE.md
examples/: test_litellm.py
schema/: 001_initial_schema.sql  002_auth_and_watchlist.sql  003_filing_text_content.sql  004_companies_and_10k_support.sql  README.md
scripts/: add_indexes.py  apply_migration.py  check_text_coverage.py  extract_filing_text.py  generate_embeddings.py  ingest_10k_filings.py  load_company_tickers.py  setup_database.py  start_api.py  test_agent.py  test_agent_with_rag.py  test_analytics.py  test_analytics_cache.py  test_api_auto.py  test_api_live.py  test_api_setup.py  test_db_connection.py  test_end_to_end.py  test_phase8a.py  test_rag_api.py  test_rag_components.py  test_rag_search.py  test_rag_setup.py  test_rag_tool.py  test_rest_endpoints.py  test_sql_tool.py  use-docker.bat  use-supabase.bat  verify_schema.py
src/agent/: __init__.py  llm_config.py  orchestrator.py  prompts.py
src/api/: __init__.py  analytics.py  cache.py  dependencies.py  main.py  schemas.py
src/auth/: __init__.py  supabase_client.py
src/db/: README.md  __init__.py  base.py  loader.py  models.py  session.py
src/ingestion/: __init__.py  __main__.py  edgar_client.py  edgar_xml_downloader.py  form10k_parser.py  ingest.py  (+3 more)
tests/: __init__.py  conftest.py
(+45 files in other folders)
